<resources>
    <string name="app_name">MoviesDB</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="people">People</string>
    <string name="more">More</string>
    <string name="popularity_descending">Popularity Desc.</string>
    <string name="popularity_ascending">Popularity Asc.</string>
    <string name="rating_descending">Rating Desc.</string>
    <string name="rating_ascending">Rating Asc.</string>
    <string name="release_date_descending">Release Date Desc.</string>
    <string name="release_date_ascending">Release Date Asc.</string>
    <string name="title_a_z">A-Z</string>
    <string name="title_z_a">Z-A</string>
    <string name="upcoming">Upcoming</string>
    <string name="percentage">%s%%</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_skip">Skip</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="email_format_error">Wrong email format</string>
    <string name="password_too_short">Password too short</string>
    <string name="username_empty">Username is empty</string>
    <string name="search">Search</string>
    <string name="user_score_multiline">User\nScore</string>
    <string name="status">Status</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="cast">Cast</string>
    <string name="type">Type</string>
    <string name="network">Network</string>
    <string name="biography">Biography</string>
    <string name="known_for">Known For</string>
    <string name="dob">D.O.B</string>
    <string name="pob">P.O.B</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>


    <!--    API_KEY empty-->
    <string name="api_key_empty">Please set a valid API Key and restart the app</string>

    <!--    Onboarding -->
    <string name="pager_title_1">Get movie updates</string>
    <string name="pager_desc_1">Get the details of the latest movies and tv shows.</string>

    <!--    Filter -->
    <string name="filter">Filter</string>
    <string name="sort_results_by">Sort Results By</string>
    <string name="release_dates">Release Dates</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="genres">Genres</string>
    <string name="language">Language</string>
    <string name="user_score">User Score</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="close">Close</string>
    <string name="action_adventure">Action &amp; Adventure</string>
    <string name="kids">Kids</string>
    <string name="reality">Reality</string>
    <string name="sci_fi_fantasy">Sci-Fi &amp; Fantasy</string>
    <string name="soap">Soap</string>
    <string name="talk">Talk</string>
    <string name="war_politics">War &amp; Politics</string>

    <!--    Language -->
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="mandarin">Mandarin</string>
    <string name="spanish">Spanish</string>
    <string name="korean">Korean</string>

    <!--    Error -->
    <string name="failed_to_load">Failed to load</string>
    <string name="error_loading_content">Error loading content</string>
    <string name="retry">Retry</string>
    <string name="favourite_error">Please wait for details to finish loading.</string>

    <!--    Home -->
    <string name="toolbar_description">Millions of movies, TV shows and people to discover. Explore now.</string>
    <string name="toolbar_welcome">Welcome.</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="trending_tv_shows">Trending TV Shows</string>
    <string name="trending_people">Trending People</string>

    <!--    Transition -->
    <string name="transition_item">transition_item %1$s</string>
    <string name="transition_detail">transition_detail</string>

    <!--    Gender -->
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non-binary</string>

    <!--    Preferences -->
    <string name="favourite_films">Favourite Films</string>
    <string name="favourite_films_description">List of your favourite films</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Are you sure you want to logout? Logging out will clear your favourites (still in development)</string>

    <!--    Film Details -->
    <string name="added_to_favourites">Added to favourites</string>
    <string name="removed_from_favourites">Removed from favourites</string>

</resources>