<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.film.FilmDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/details_menu">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/film_backdrop_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black_faded" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/film_iv_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="140dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="10: 16"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/film_iv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/film_title_tv"
                    style="@style/HeaderText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/film_iv_view"
                    app:layout_constraintTop_toTopOf="@+id/film_iv_view"
                    tools:text="Title here" />

                <TextView
                    android:id="@+id/release_date_tv"
                    style="@style/TitleText.White"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/film_iv_view"
                    app:layout_constraintTop_toBottomOf="@+id/film_title_tv"
                    tools:text="June 6th 2015" />

                <TextView
                    android:id="@+id/film_genres_tv"
                    style="@style/TitleText.White"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/film_iv_view"
                    app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
                    tools:text="Drama, Sci-Fi &amp; Fantasy" />

                <include
                    android:id="@+id/rating_view"
                    layout="@layout/circular_percentage_bar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toEndOf="@+id/film_iv_view"
                    app:layout_constraintTop_toBottomOf="@+id/film_genres_tv" />

                <TextView
                    style="@style/TitleText.SmallBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/user_score_multiline"
                    android:textColor="@color/off_white"
                    app:layout_constraintBottom_toBottomOf="@+id/rating_view"
                    app:layout_constraintStart_toEndOf="@+id/rating_view"
                    app:layout_constraintTop_toTopOf="@+id/rating_view" />


                <TextView
                    android:id="@+id/tagline_tv"
                    style="@style/Tagline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/film_iv_view"
                    app:layout_constraintTop_toBottomOf="@+id/film_iv_view"
                    tools:text="Tagline here" />

                <TextView
                    android:id="@+id/overview_tv"
                    style="@style/TitleText.Small"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:ellipsize="end"
                    android:maxLines="6"
                    android:textColor="@color/off_white"
                    app:layout_constraintBottom_toBottomOf="@+id/film_backdrop_iv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/film_iv_view"
                    app:layout_constraintTop_toBottomOf="@+id/tagline_tv"
                    tools:text="Overview here" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                app:layout_constraintTop_toBottomOf="@+id/header_view">

                <LinearLayout
                    android:id="@+id/status_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/status_tv"
                        style="@style/TitleText.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status" />

                    <TextView
                        android:id="@+id/status_text_tv"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Released" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/language_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@+id/status_view"
                    app:layout_constraintTop_toBottomOf="@+id/status_view">

                    <TextView
                        android:id="@+id/language_tv"
                        style="@style/TitleText.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language" />

                    <TextView
                        android:id="@+id/language_text_tv"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="English" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/budget_type_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/status_view"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/budget_type_tv"
                        style="@style/TitleText.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/budget" />

                    <TextView
                        android:id="@+id/budget_type_text_tv"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="-" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/network_revenue_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@+id/budget_type_view"
                    app:layout_constraintTop_toBottomOf="@+id/budget_type_view">

                    <TextView
                        android:id="@+id/network_revenue_tv"
                        style="@style/TitleText.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/revenue" />

                    <TextView
                        android:id="@+id/network_revenue_text_tv"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="-" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/cast_tv"
                style="@style/HeaderText.MediumBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:text="@string/cast"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cast_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutAnimation="@anim/home_list_layout_animation"
                android:layout_marginVertical="16dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@+id/cast_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
